# h05-chat

./: Cargo.toml  README.md  _typos.toml  cliff.toml
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem  encoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  test.rest
chat_server/fixtures/: test.sql
chat_server/src/: error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs
chat_server/src/middlewares/: chat.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
notify_server/: index.html
