[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test-util = ["sqlx-db-tester", "http-body-util"]

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chat_core = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber ={ workspace = true }
jwt-simple = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

http-body-util = { version = "0.1.1", optional = true }
sqlx-db-tester = { version = "0.4.2", optional = true }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.5"

[dev-dependencies]
chat_server = {workspace = true, features = ["test-util"]}
